--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,37 @@ h6 {
 }
 
 /* My CSS */
+
+:root {
+  --clr-primary-300: hsl(31, 77%, 52%);
+  --clr-primary-700: hsl(184, 100%, 22%);
+  --clr-primary-900: hsl(179, 100%, 13%);
+
+  --clr-neutral-100: hsl(0, 0%, 95%);
+  --clr-neutral-200: hsla(0, 0%, 100%, 0.75);
+
+  --fs-body: 15px;
+
+  --fw-regular: 400;
+  --fw-bold: 700;
+
+  --ff-body: "Lexend Deca", sans-serif;
+  --ff-title: "Big Shoulders Display", cursive;
+}
+
+body {
+  background-color: var(--clr-neutral-200);
+  font-size: var(--fs-body);
+  color: var(--clr-neutral-200);
+  font-family: var(--ff-body);
+}
+
+main {
+  min-height: 100vh;
+  display: grid;
+}
+
+.card {
+  place-self: center center;
+  background-color: black;
+}
